# NorthHackaton

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.docker/nginx/: nginx.conf
configs/: Environment.py
ml/: Train.ipynb  html_tags.py  spell_checker.py
routing/v1/: ML.py
schemas/: ML.py
