[tool.poetry]
name = "NorthHackaton"
version = "0.1.0"
description = ""
authors = ["kirill <shkolenko02-03-2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.3"
loguru = "^0.7.0"
pytest = "^7.4.0"
docx = "^0.2.4"
python-docx = "^0.8.11"
transformers = {extras = ["torch"], version = "^4.33.2"}
cython = "^3.0.2"
accelerate = "^0.23.0"
torch = ">=2.0.0, !=2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
